; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/local/extr_24113.c_banner.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/local/extr_24113.c_banner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [40 x i8] c"NetBSD/x86 systrace local root exploit\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"by ziegenpeter\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"no comment\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @banner() #0 {
  %1 = call i32 @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %3 = call i64 (...) @getuid()
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = call i32 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 @exit(i32 1) #3
  unreachable

8:                                                ; preds = %0
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i64 @getuid(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
